Search bar overlapping issue fixes

--- a/antora-ui-camel/src/css/header.css
+++ b/antora-ui-camel/src/css/header.css
@@ -322,7 +322,7 @@ body {
 }
 
 #search_results {
-  top: 3rem;
+  top: 3.31rem;
   background: #fffe;
   padding: 0.5rem;
   text-align: left;
